--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,13 @@
+@article{brisaboa2018compact,
+  title={A compact representation for trips over networks built on self-indexes},
+  author={Brisaboa, Nieves R and Fari{\~n}a, Antonio and Galaktionov, Daniil and Rodriguez, M Andrea},
+  journal={Information Systems},
+  volume={78},
+  pages={1--22},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @inproceedings{rivera2018faster,
   title={Faster and Smaller Two-Level Index for Network-Based Trajectories},
   author={Rivera, Rodrigo and Rodr{\'\i}guez, M Andrea and Seco, Diego},
