--- a/refs.bib
+++ b/refs.bib
@@ -1,3 +1,12 @@
+@inproceedings{moffat2017ans,
+  title={ANS-based index compression},
+  author={Moffat, Alistair and Petri, Matthias},
+  booktitle={Proceedings of the 2017 ACM on Conference on Information and Knowledge Management},
+  pages={677--686},
+  year={2017},
+  organization={ACM}
+}
+
 @article{brisaboa2018compact,
   title={A compact representation for trips over networks built on self-indexes},
   author={Brisaboa, Nieves R and Fari{\~n}a, Antonio and Galaktionov, Daniil and Rodriguez, M Andrea},
