Update on Overleaf.

--- a/paper.tex
+++ b/paper.tex
@@ -73,7 +73,7 @@ Explain ZSTD and applications.
 Finally, explain our work-in-progress model for trip representation, citing SPIRE. Newer models are largely irrelevant.
 
 \subsection{Our previous works in trip representation}
-So we speak about IS and SPIRE 2018 version here.
+So we speak about IS and SPIRE 2018 version here. Maybe stuff the brief explanation about WMs here too?
 
 \subsection{A model for compact trip representation}
 So here goes a picture where we have stops $s_i \in S = \{1,...|S|\}$, lines $l_i \in L = \{1,...|L|\}$ and journeys $j_i \in J^l = \{1,...|J^l|\}$. It is important to state that journeys are \textbf{not} identified by $j_i$, as the same $j_i$ can belong to several $J^l$ from different lines, so we speak about journey \textbf{codes} (jcodes) instead of journey identifiers.
