--- a/paper.tex
+++ b/paper.tex
@@ -58,7 +58,61 @@ The abstract should briefly summarize the contents of the paper in
 We took the idea from our SPIRE paper and we made it great, using ZSTD compression and other tricks to improve the time complexity of the queries for the \ctr. Regarding \acumm, it was not possible to improve its speed (as it was already a few memory accesses per query), but we managed to compress it without increasing time complexity. We rock.
 
 \section{Related works}
+Many data structures have been proposed to support efficient 
+query capabilities on collections of
+trajectories. We refer to~\cite[Chapter 4]{DBLP:books/sp/PelekisT14} for a comprehensive and
+up-to-date survey on data management techniques for trajectories of moving objects. We can broadly
+classify these data structures into two groups: those that index trajectories in free space and
+those that index trajectories that are constrained to a network.
+
+In free space, it is common to see spatial indexes that extend the {\em R-Tree} %spatial
+index~\cite{DBLP:conf/sigmod/Guttman84} beyond a simple {\em 3D R-Tree} where the time is one of the dimensions.
+Two examples of such indexes can be found in~\cite{DBLP:conf/vldb/PfoserJT00}
+where the authors present two fundamental variations of the {\em R-Tree}: the {\em STR-Tree} and the {\em TB-Tree}.
+Both indexes modify the classical construction algorithm for the {\em R-Tree},
+where the nodes are not only grouped by the spatial distance among the indexed objects,
+but also by the trajectories they belong to. In the {\em MV3R-tree}~\cite{DBLP:conf/vldb/PapadiasT01},
+the construction takes into account temporal information of the moving objects,
+adapting ideas from the Historical {\em R-Tree}~\cite{nascimento1998towards}. Another
+interesting approach is described in~\cite{chakka2003indexing}, where the authors
+split trajectories of moving objects across partitions of space, indexing each partition
+separately. This improves query efficiency, as only the partitions that intersect
+a query region are accessed.
+
+{\em R-Tree} adaptations can also be useful when the trajectories are constrained to a network.
+They exploit the constraints imposed by the topology of the network to optimize the data structure.
+This is the case of the {\em FNR-tree}~\cite{DBLP:conf/ssd/Frentzos03}, which consists of a 
+{\em 2D R-Tree} to index the %line 
+segments of the trajectories over the network,
+and a forest of {\em 1D R-Trees} used to index the time interval when each trajectory is moving through
+each segment of the network.
+The {\em MON-Tree}~\cite{DBLP:journals/geoinformatica/AlmeidaG05} can be seen as an
+improvement over the {\em FNR-Tree}, saving considerable space by indexing MBRs of larger
+network elements (edge segments or entire roads) and reducing the number of disk accesses at query time.
+Both indexes are outperformed by the {\em TMN-Tree}~\cite{chang2010tmn} in query time,
+which indexes whole trajectories of moving objects with a {\em 2D R$*$-Tree} and
+indexing the temporal component with a B$⁺$-Tree, which proves to be more efficient for
+that application than the {\em R-Tree}.
 A nice review of all the R-Tree derivatives: \cite{john2017performance}.
+
+{\em PARINET} is another interesting alternative to represent trajectories constrained to a network~\cite{DBLP:journals/vldb/PopaZOBV11}. %
+
+It partitions trajectories into segments from an underlying road network using a
+complex cost model to minimize the number of disk accesses at query time. It takes into
+account the spatial relations among the indexed network elements, as well as some statistics
+of the data to index. Then it adds a temporal B$⁺$-tree to index the trajectory segments from each road.
+Those indexes permit {\em PARINET} to filter out candidate trajectory segments matching time constraints at query time.
+The same ideas were used in {\em TRIFL}~\cite{that2015trifl}, where the cost model is adapted
+for flash storage.
+
+In another work~\cite{DBLP:conf/gis/KroghPTT14} the authors propose an indexing structure called {\em NETTRA} to answer  
+{\em strict}  and {\em approximate path queries} that can be implemented in standard SQL using $B^+$-trees and self-JOIN operations.  
+For each trajectory, {\em NETTRA} represents the sequence of adjacent network edges touched by the trajectory as  
+entries in a table  with four columns:  id, entering and leaving time, and a hash value 
+ of the entire path up to and including the edge itself.
+Using the hash value  for the first and last
+edge on a query path, {\em NETTRA}  determines whether
+the trajectory followed a specific path between these edges.
 
 Review whatever we may have missed from state of the art in prev. papers \cite{koide2018cinct} and \cite{ding2018ultraman}. For vehicles we also have this \cite{cai2018vector} and \cite{lovell2018lossless}. On contrast, in \cite{al2017semantictraj} we have a very nice example of a text-based trajectory indexing. Geodabs is another example of a text-based index that takes the sequence into account using fingerprinting \cite{chapuis2018geodabs}.
 
@@ -70,10 +124,8 @@ If possible, cite applications of our kind of analysis for transportat/ad compan
 
 Explain ZSTD and applications.
 
-Finally, explain our work-in-progress model for trip representation, citing SPIRE. Newer models are largely irrelevant.
-
 \subsection{Our previous works in trip representation}
-So we speak about IS and SPIRE 2018 version here. Maybe stuff the brief explanation about WMs here too?
+So we speak about IS and SPIRE 2018 version here. Maybe stuff the brief explanation about WMs here too? Or move this and the next subsection to introduction.
 
 \subsection{A model for compact trip representation}
 So here goes a picture where we have stops $s_i \in S = \{1,...|S|\}$, lines $l_i \in L = \{1,...|L|\}$ and journeys $j_i \in J^l = \{1,...|J^l|\}$. It is important to state that journeys are \textbf{not} identified by $j_i$, as the same $j_i$ can belong to several $J^l$ from different lines, so we speak about journey \textbf{codes} (jcodes) instead of journey identifiers.
@@ -106,7 +158,7 @@ In the context of public transportation networks, we are interested in solving t
 As of today, we are not aware of any indexing structure that would allow to efficiently represent trajectories that could also support all the kinds of queries described in Section~\ref{seq:rq}. For this reason, we propose two data structures, \acumm~and~\ctr. The first is targeted for queries of type A, solving most aggregation queries in constant time, while the later can be used for queries of type B.
 
 \subsection{Common Structures}
-Both \acumm and \ctr need a network representation to be operated, which is represented in the following components:
+Both \acumm~and \ctr~need a network representation to be operated, which is represented in the following components:
 
 \begin{itemize}
     \item $lineStop_i(j)$ is the $j$th stop of line $l_i$
